# mirrors

./: .gitignore  Makefile  PKG-INFO  README.md  create_bindings.sh  pyproject.toml
examples/: simple_completion.py
pypi/xai_grok_sdk/: LICENSE
pypi/xai_grok_sdk/src/xai_grok_sdk/: models.py  xai.py
pypi/xai_grok_sdk/src/xai_grok_sdk.egg-info/: top_level.txt
pypi/xai_sdk/: .gitignore
pypi/xai_sdk/examples/: simple_chat.py
pypi/xai_sdk/src/xai_sdk/: chat.py  embedder.py  grok.py  sampler.py
pypi/xai_sdk/test/: models_test.py
src/xai_grok_sdk/: __init__.py  models.py  xai.py
src/xai_grok_sdk.egg-info/: PKG-INFO  SOURCES.txt
src/xai_sdk/: __about__.py  __init__.py  chat.py  client.py  embedder.py  files.py  grok.py  ide.py  sampler.py
src/xai_sdk/compat/: chat.py
src/xai_sdk/proto/: chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  compat_chat_pb2.py  compat_chat_pb2.pyi  compat_chat_pb2_grpc.py  embedder_public_pb2.py  embedder_public_pb2.pyi  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  prod_search_pb2.py  prod_search_pb2.pyi  prod_search_pb2_grpc.py  sampler_public_pb2.py  sampler_public_pb2.pyi  sampler_public_pb2_grpc.py  stateless_chat_pb2.py  stateless_chat_pb2.pyi  stateless_chat_pb2_grpc.py  x_entities_pb2.py  x_entities_pb2.pyi  x_entities_pb2_grpc.py
src/xai_sdk/proto/v2/: embed_pb2.py  embed_pb2.pyi  embed_pb2_grpc.py  image_pb2_grpc.py  models_pb2.py  models_pb2.pyi
src/xai_sdk/v1/: files.py  grok.py
src/xai_sdk/v1/compat/: chat.py  client.py
src/xai_sdk/v2/: __init__.py  chat.py  client.py
test/: chat_test.py  embeddings_test.py
(+35 files in other folders)
